--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: David Albert
+title: Alex Clemmer
 ---
 
 <div id="home">
-  <h1>I'm embarrassed by everything I've ever written, including these blog posts:</h1>
+  <h1>∀x: ML+x:</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
