--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Alex Clemmer
 ---
 
 <div id="home">
-  <h1>∀x: ML+x:</h1>
+  <h1>∀x: Machine Learning + x:</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
