Update blog header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Alex Clemmer
 ---
 
 <div id="home">
-  <h1>I write about my work. Basically ∀x: ML + x.</h1>
+  <h1 id="blog-title">Unfortunately for you all, I maintain a blog:</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
