--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Alex Clemmer
   <h1 id="blog-title">Entries are listed in reverse chronological order:</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><span>{{ post.date | date_to_string }}</span> <span class="theory">{{ post.theory }}</span> <span class="technique">{{ post.technique }}</span> <span class="analysis">{{ post.analysis }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
