--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ title: Alex Clemmer
 
 <div id="home">
   <h1 id="blog-title">Entries are listed in reverse chronological order:</h1>
+    key: <span class="theory">•</span> = theory, <span class="technique">•</span> = technique, <span class="analysis">•</span> = analysis
+  <p>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> <span class="theory">{{ post.theory }}</span> <span class="technique">{{ post.technique }}</span> <span class="analysis">{{ post.analysis }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
