--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Alex Clemmer
 ---
 
 <div id="home">
-  <h1 id="blog-title">Entries are listed in reverse chronological order:</h1>
+  <h1 id="blog-title">Here are some blog posts.</h1>
     key: <span class="theory">•</span> = theory, <span class="technique">•</span> = technique, <span class="analysis">•</span> = analysis
   <p>
   <ul class="posts">
