Change category glyph

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Alex Clemmer
 
 <div id="home">
   <h1 id="blog-title">Here are some blog posts.</h1>
-    key: <span class="theory">•</span> = theory, <span class="technique">•</span> = technique, <span class="analysis">•</span> = analysis
+    key: <span class="theory">■</span> = theory, <span class="technique">■</span> = technique, <span class="analysis">■</span> = analysis
   <p>
   <ul class="posts">
     {% for post in site.posts %}
